# P1---INEX

./: README.md
INEX/: CMakeLists.txt  package.xml
INEX/launcher/: inex.launch
INEX/src/: .navigator.cpp.swp  cartographer.h  color_detection.cpp  inex.cpp  main(from dud).cpp  main.cpp  navigation.cpp  navigator.cpp  pathplaner.h  transmit.sh
remote/: package.xml
remote/src/: get.sh  remote.cpp
