<?xml version="1.0"?>
<package format="2">
  <name>INEX</name> <!-- The name of the package -->
  <version>0.0.0</version> <!-- The version number of the package (required to be 3 dot-separated integers) -->
  <description>Interplanetary Exploration Vehicle navigation automation software</description> <!-- A description of the package contents-->
  <maintainer email="malema18@student.aau.dk">Marco Alemão, Philip Lund Møller, Damián Leporis, Andrei Voica, Jakob Hoy, Dominika Góral, Manuela Gonçalves</maintainer> <!-- The name of the person(s) that is/are maintaining the package -->
  <license>MIT</license> <!-- [I don't know if the MIT license is required for ROS] The software license(s) (e.g. GPL, BSD, ASL) under which the code is released.-->
  <depend>roscpp</depend>
  <depend>turtlesim</depend>
  <buildtool_depend>catkin</buildtool_depend>
</package>
