<?xml version="0.1"?>
<package format="2">
  <name>inex</name>
  <version>0.0.1</version>
  <description>Interplanetary exploration vehicle navigation automation system</description>
  <maintainer email="malema18@student.aau.dk">Marco Alemao, Philip Moller, Andrei Voica, Dominika Goral, Jakob Hoy, Manuela Mendes, Damian Leporis</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>image_transport</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>move_base</exec_depend>  
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>opencv2</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>kobuki_msgs</exec_depend>
</package>
